--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -350,21 +350,29 @@
 
                             <div class="tab-content">
 
-                                <div class="tab-pane active top-buffer" role="tabpanel" id="tab21">
-                                    <fieldset>
-                                        <form class="form-horizontal " method="post">
-                                            <ul id="predmeti">
+                                <div class="tab-pane active top-buffer table-responsive" role="tabpanel" id="tab21">
+                                    <table class="table table-condensed">
+                                        <thead>
+                                            <tr>
+                                                <th>Naziv predmeta</th>
+                                                <th>Cijena</th>
+                                                <th>Ukloni</th>
+                                                <th>Uredi cijenu</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="predmeti">
                                                 @foreach (var predmet in Model.mojeVlastiteInstrukcije.mojiPredmeti) {
-                                                    <li><b>@Html.Raw(predmet.nazivPredmet).ToHtmlString()</b> Cijena: @Html.Raw(predmet.cijenaPredmet.ToString()) HRK<button class="btn btn-sm btn-danger Delete" value="@Html.DisplayName(predmet.IDpredmet.ToString())">Ukloni</button></li>
+                                                    <tr><td>@Html.Raw(predmet.nazivPredmet)</td><td>@Html.Raw(predmet.cijenaPredmet.ToString()) HRK</td><td><button class="btn btn-sm btn-danger Delete" value="@Html.DisplayName(predmet.IDpredmet.ToString())">Ukloni</button></td><td><button class="btn btn-sm btn-warning Edit" value="@Html.DisplayName(predmet.IDpredmet.ToString())">Uredi</button></td></tr>
 
                                                 }
-                                            </ul>
+                                        </tbody>
+                                    </table>
+
                                             <div class="col-md-2 mali-razmak-gore">
                                                 <button class="btn btn-success dodajNovi">Stvori novi predmet</button> <br />
                                                 <button class="btn btn-primary dodajPostojeci">Dodaj postojeći predmet</button>
                                             </div>
-                                        </form>
-                                    </fieldset>
+
                                 </div>
 
 
@@ -513,48 +521,57 @@
 
 
             </div>
+            <table style="visibility: hidden;">
+                <tbody id="postojeci-predmet-tr">
+                    <tr>
+                        <td>
+                            <select class='predmet'>
+                                @foreach (var predmet in Model.mojeVlastiteInstrukcije.sviPredmeti) {
+                                    <option value='@Html.Raw(predmet.ID_predmet.ToString())'>@Html.Raw(predmet.naziv_predmet)</option>
+                                }
+                            </select>
+                        </td>
+                        <td>
 
-            <div id="postojeci-predmet-li" style="visibility: hidden;">
-                <li>
-                    <select class='predmet'>
-                        @foreach (var predmet in Model.mojeVlastiteInstrukcije.sviPredmeti) {
-                            <option value='@Html.Raw(predmet.ID_predmet.ToString())'>@Html.Raw(predmet.naziv_predmet)</option>
-                        }
-                    </select>
-                    <br />
-                    <input class='predmetCijena' type='number' min='0' step='0.01' placeholder='Cijena' required />
-                    <br />
-                    <button class='postojeciPohrani'>Pohrani</button>
-
-                </li>
+                            <input class='predmetCijena' type='number' min='0' step='0.01' placeholder='Cijena' required />
+                        </td>
+                        <td>
+                            <button class='btn btn-success btn-sm postojeciPohrani'>Pohrani</button>
+                        </td>
+                        <td></td>
+                    </tr>
 
 
-            </div>
-            <div id="novi-predmet-li" style="visibility: hidden;">
-                <li>
+                </tbody>
+            </table>
+            <table style="visibility: hidden;">
+                <tbody id="novi-predmet-tr" style="visibility: hidden;">
+                    <tr>
+                        <td>
+                            <input class='predmetIme' type='text' maxlength='50' placeholder='Naziv predmeta' required />
 
-                    <input class='predmetIme' type='text' maxlength='50' placeholder='Naziv predmeta' required /><br />
-                    <input class='predmetKratica' type='text' maxlength='10' placeholder='Kratica' required /><br />
-                    <input class='predmetOpis' type='text' maxlength='100' placeholder='Opis predmeta' required /><br />
-                    <select class='predmetKategorija'>
-                        @foreach (var kategorija in Model.mojeVlastiteInstrukcije.sveKategorije) {
-                            <option value='@Html.Raw(kategorija.ID_kategorija.ToString())'>@Html.Raw(kategorija.naziv_kategorija)</option>
-                        }
-                    </select>
-                    <br />
-                    <select class='predmetUstanova'>
-                        @foreach (var ustanova in Model.mojeVlastiteInstrukcije.sveUstanove) {
-                            <option value='@Html.Raw(ustanova.ID_ustanova.ToString())'>@Html.Raw(ustanova.Naziv_ustanova)</option>
-                        }
-                    </select>
-                    <br />
-                    <input class='predmetCijena' type='number' min='0' step='0.01' placeholder='Cijena' required />
-                    <br />
-                    <button class='predmetPohrani'>Pohrani</button>
-
-                </li>
-            </div>
-
+                            <input class='predmetKratica' type='text' maxlength='10' placeholder='Kratica' required />
+                            <input class='predmetOpis' type='text' maxlength='100' placeholder='Opis predmeta' required />
+                            <select class='predmetKategorija'>
+                                @foreach (var kategorija in Model.mojeVlastiteInstrukcije.sveKategorije) {
+                                    <option value='@Html.Raw(kategorija.ID_kategorija.ToString())'>@Html.Raw(kategorija.naziv_kategorija)</option>
+                                }
+                            </select>
+                            <select class='predmetUstanova'>
+                                @foreach (var ustanova in Model.mojeVlastiteInstrukcije.sveUstanove) {
+                                    <option value='@Html.Raw(ustanova.ID_ustanova.ToString())'>@Html.Raw(ustanova.Naziv_ustanova)</option>
+                                }
+                            </select>
+                        </td>
+                        <td>
+                            <input class='predmetCijena' type='number' min='0' step='0.01' placeholder='Cijena' required />
+                        </td>
+                        <td>
+                            <button class='btn btn-success btn-sm predmetPohrani'>Pohrani</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
             <script type="text/javascript">
                 var droppedID;
 
@@ -852,7 +869,9 @@
                     e.preventDefault();
                     if(confirm("Jeste li sigurni da želite obrisati predmet?")){
                         var $el = $(this);
+                        $edit = $el.closest("tr").find(".Edit");
                         $(this).prop("disabled", true);
+                        $edit.prop("disabled", true);
                         $.ajax({
                             url: '/Profil/Delete',
                             type: 'POST',
@@ -860,19 +879,21 @@
                             data: {id: $(this).attr("value") },
                             error: function(){
                                 $el.prop("disabled", false);
+                                $edit.prop("disabled", false);
                                 alert("Greška pri brisanju predmeta!");
                             },
                             success: function () {
-                                $el.parent().fadeOut(200);
+                                $el.closest("tr").fadeOut(200);
                             }
                         });
                     }
                 });
             </script>
+            
             <script>
                 $(".dodajNovi").click(function(e){
                     e.preventDefault();
-                    $noviPredmet = $("#novi-predmet-li > li");
+                    $noviPredmet = $("#novi-predmet-tr > tr");
                     $("#predmeti").append($noviPredmet.clone(true));
 
                 });
@@ -882,7 +903,7 @@
             <script>
                 $(".dodajPostojeci").click(function(e){
                     e.preventDefault();
-                    $postojeciPredmet = $("#postojeci-predmet-li > li");
+                    $postojeciPredmet = $("#postojeci-predmet-tr > tr");
                     $("#predmeti").append($postojeciPredmet.clone(true));
 
                 });
@@ -891,15 +912,17 @@
             <script>
                 $(document).on('click', '.predmetPohrani', function(e){
                     e.preventDefault();
-                    var li = $(this).parent();
-                    nazivPredmeta = li.find(".predmetIme").val();
-                    cijenaPredmet = li.find(".predmetCijena").val();
-                    if(nazivPredmeta.length <= 0 || cijenaPredmet.length <= 0){
+                    var tr = $(this).closest("tr");
+                    nazivPredmeta = tr.find(".predmetIme").val();
+                    cijenaPredmeta = tr.find(".predmetCijena").val();
+                    if(nazivPredmeta.length <= 0 || cijenaPredmeta.length <= 0){
                         alert("Unesite ime predmeta i cijenu!");
                         return;
                     }
-                    $(this).prop("disabled", true);
                     $button = $(this);
+                    $edit = $button.closest("tr").find(".Edit");
+                    $button.prop("disabled", true);
+                    $edit.prop("disabled", true);
 
                     $.ajax({
                         type: "POST",
@@ -908,24 +931,24 @@
                         //    string nazivPredmet, string kraticaPredmet, string opisPredmet, string IDUstanova, string IDKategorija, string cijenaPredmet
 
                         data: JSON.stringify({
-                            nazivPredmet: li.find(".predmetIme").val(),
-                            kraticaPredmet: li.find(".predmetKratica").val(),
-                            opisPredmet: li.find(".predmetOpis").val(),
-                            IDUstanova: li.find(".predmetUstanova").val(),
-                            IDKategorija: li.find(".predmetKategorija").val(),
-                            cijenaPredmet: li.find(".predmetCijena").val()
+                            nazivPredmet: nazivPredmeta,
+                            kraticaPredmet: tr.find(".predmetKratica").val(),
+                            opisPredmet: tr.find(".predmetOpis").val(),
+                            IDUstanova: tr.find(".predmetUstanova").val(),
+                            IDKategorija: tr.find(".predmetKategorija").val(),
+                            cijenaPredmet: cijenaPredmeta
                         }),
                         success: function(res){
                             if(res == null){
                                 //internal error
                                 alert("Greška pri stvaranju novog predmeta.")
                                 $button.prop("disabled", false);
+                                $edit.prop("disabled", false);
                             }
                             else{
-                                li.empty();
-                                li.append("<b>" +nazivPredmeta +"</b>" + " Cijena: " +cijenaPredmet + " HRK");
-                                li.append("<button class='btn btn-danger Delete' value='" + res + "' > Ukloni </button>" );
-
+                                tr.empty();
+                                tr.append("<td>" +nazivPredmeta +"</td><td>" + cijenaPredmeta.replace(/\./g, ',') + " HRK</td>" + "<td><button class='btn btn-sm btn-danger Delete' value='" + res + "' > Ukloni </button></td><td><button class='btn btn-sm btn-warning Edit' value='" + res + "' > Uredi </button></td>");
+                               
                             }
                         }
                     });
@@ -935,17 +958,17 @@
             <script>
                 $(document).on('click', '.postojeciPohrani', function(e){
                     e.preventDefault();
-                    var li = $(this).parent();
-                    if(li.find(".predmetCijena").val().length <= 0){
+                    var tr = $(this).closest("tr");
+                    if(tr.find(".predmetCijena").val().length <= 0){
                         alert("Unesite cijenu!");
                         return;
                     }
                     $button = $(this);
                     $(this).prop("disabled", true);
-                    combobox = li.find(".predmet");
+                    combobox = tr.find(".predmet");
                     idPredmeta = combobox.val();
                     nazivPredmeta = combobox.html();
-                    cijenaPredmet = li.find(".predmetCijena").val();
+                    cijenaPredmet = tr.find(".predmetCijena").val();
 
                     $.ajax({
                         type: "POST",
@@ -953,8 +976,8 @@
                         url: "/Profil/InsertExisting",
 
                         data: JSON.stringify({
-                            IDPredmet: li.find(".predmet").val(),
-                            cijenaPredmet: li.find(".predmetCijena").val()
+                            IDPredmet: tr.find(".predmet").val(),
+                            cijenaPredmet: tr.find(".predmetCijena").val()
                         }),
 
 
@@ -970,9 +993,9 @@
                                 $button.prop("disabled", false);
                             }
                             else{
-                                li.empty();
-                                li.append("<b>" +res +"</b>" + " Cijena: " +cijenaPredmet + " HRK");
-                                li.append("<button class='btn btn-danger Delete' value='" + idPredmeta + "' > Ukloni </button>" );
+                                tr.empty();
+                                tr.append("<td>" +res +"</td>" + "<td>" +cijenaPredmet.replace(/\./g, ',') + " HRK</td>");
+                                tr.append("<td><button class='btn btn-sm btn-danger Delete' value='" + idPredmeta + "' > Ukloni </button></td><td><button class='btn btn-sm btn-warning Edit' value='" + idPredmeta + "' > Uredi </button></td>" );
 
 
                             }
@@ -981,9 +1004,61 @@
 
                 });
             </script>
+            <script>
+                $(document).on('click', '.Edit', function(e){
+                    e.preventDefault();
+                    idPredmet = $(this).attr("value");
+                    $(this).prop("disabled", true);
+                    var tr = $(this).closest("tr");
+                    var tdCijena = tr.children().eq(1);
+
+                    tdCijena.append("&nbsp;<input class='novaCijena' type='number' min='0' step='0.01' placeholder='Nova cijena'/>&nbsp;<button class='btn btn-sm btn-success PohraniCijenu' value='" + idPredmet + "'>Pohrani</button>");
+
+                });
+            </script>
 
 
+            <script>
+                $(document).on('click', '.PohraniCijenu', function(e){
+                    e.preventDefault();
+                    var td = $(this).parent();
+                    var tr = $(this).closest("tr");
+                    var $delButton = tr.find(".Delete");
+                    $delButton.prop("disabled", true);
+                    novaCijena = tr.find(".novaCijena").val();
+                    idPredmet = $(this).attr("value");
+                    var $savechangeButton = $(this);
+                    var $editButton = tr.find(".Edit");
 
+                
+
+                    
+                    $.ajax({
+                        type: "POST",
+                        contentType: "application/json; charset=utf-8",
+                        url: "/Profil/UpdatePrice",
+
+                        data: JSON.stringify({
+                            IDPredmet: idPredmet,
+                            cijenaPredmet: tr.find(".novaCijena").val()
+                        }),
+                        success: function(res){
+                            if(!res){
+                                //internal error
+                                alert("Greška pri promjeni cijene.");
+                            }
+                            else{
+                                td.empty();
+                                td.append(novaCijena.replace(/\./g, ',') + " HRK");
+                                $editButton.prop("disabled", false);
+                                $delButton.prop("disabled", false);
+
+                            }
+                        }
+                    });
+
+                });
+            </script>
 
         </div>
     </div>
