--- a/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
@@ -5,35 +5,37 @@
 <head>
     <title>@ViewBag.Title</title>
 </head>
-<body>
+<body class="bootstrap-fix">
     @using (Html.BeginForm())
     {
         <div class="container">
             <div class="row">
-                <div class="col-xs-6">
+                <div class="col-md-3 col-sm-2 col-xs-0"></div>
+                <div class="col-md-3 col-sm-4 col-xs-6">
                     <hr />
-                    @Html.LabelFor(model => model.Datum)
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Datum)
+                    </div>
                     @Html.EditorFor(model => model.Datum, new { htmlAttributes = new { id = "date", @class = "form-control" } })
                     @Html.LabelFor(m => m.OdabraniSatID)
                     @Html.DropDownListFor(m => Model.OdabraniSatID, Model.Sati, new { @class = "form-control" })
                     @Html.LabelFor(m => m.OdabranoTrajanjeID)
                     @Html.DropDownListFor(m => Model.OdabranoTrajanjeID, Model.Trajanja, new { @class = "form-control" })
+                    <hr />
+                    <button type="submit" class="btn btn-lg btn-info" name="naredba" value="Traži">Traži</button>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-md-3 col-sm-4 col-xs-6">
                     <hr />
                     @Html.LabelFor(m => Model.Ime)
                     @Html.EditorFor(m => Model.Ime, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.LabelFor(m => Model.Prezime)
                     @Html.EditorFor(m => Model.Prezime, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.LabelFor(m => Model.Ocjena)
-                    @Html.EditorFor(m => Model.Ocjena, new { htmlAttributes = new { @class = "form-control", min="0", max="5" } })
+                    @Html.EditorFor(m => Model.Ocjena, new { htmlAttributes = new { @class = "form-control", min = "0", max = "5" } })
                     @Html.LabelFor(m => Model.BrojInstrukcija)
-                    @Html.EditorFor(m => Model.BrojInstrukcija, new { htmlAttributes = new { @class = "form-control", min="0" } })
+                    @Html.EditorFor(m => Model.BrojInstrukcija, new { htmlAttributes = new { @class = "form-control", min = "0" } })
                 </div>
-            </div>
-            <div class="row">
-                <hr />
-                <button type="submit" style="max-width:15em" class="btn btn-lg btn-info" name="naredba" value="Traži">Traži</button>
+                <div class="col-md-3 col-sm-2 col-xs-0"></div>
             </div>
             <div class="row">
                 <hr />
@@ -67,7 +69,7 @@
                                     {
                                         <td>
                                             <div style="text-align:center;">
-                                                <button style="max-width:15em;" class="btn btn-success" disabled="disabled">
+                                                <button class="btn btn-success" disabled="disabled">
                                                     Poslan
                                                 </button>
                                             </div>
@@ -77,7 +79,7 @@
                                     {
                                         <td>
                                             <div style="text-align:center;">
-                                                <button style="max-width:15em;" class="btn btn-info" type="submit" name="naredba" value=@(opis.Instruktor.ID_osoba)>
+                                                <button class="btn btn-info" type="submit" name="naredba" value=@(opis.Instruktor.ID_osoba)>
                                                     Slobodan
                                                 </button>
                                             </div>
@@ -87,7 +89,7 @@
                                     {
                                         <td>
                                             <div style="text-align:center;">
-                                                <button style="max-width:15em;" class="btn btn-warning" disabled="disabled">
+                                                <button class="btn btn-warning" disabled="disabled">
                                                     Nedostupan
                                                 </button>
                                             </div>
@@ -97,7 +99,7 @@
                                     {
                                         <td>
                                             <div style="text-align:center;">
-                                                <button style="max-width:15em;" class="btn btn-danger" disabled="disabled">
+                                                <button class="btn btn-danger" disabled="disabled">
                                                     Rezerviran
                                                 </button>
                                             </div>
