--- a/ppij_web_aplikacija/Views/Instrukcije/Kategorija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Kategorija.cshtml
@@ -5,27 +5,44 @@
 <head>
     <title>@ViewBag.Title</title>
 </head>
-<body>
-    <h3>Biranje kategorije</h3>
-    <hr />
-    @using (Html.BeginForm("Index"))
-    {
-        <div>
-            Tražilica
-            @Html.TextBoxFor(model => model.Trazilica)
-            <input type="submit" value="Traži" />
-        </div>
-    }
-    <hr />
-    <p>
-        @foreach (var opis in Model.Opisi)
-        {
-            <div>
-                @opis.Kategorija.naziv_kategorija -
-                @Html.RouteLink("Odaberi", "Ustanove", new { kategorija_id = opis.Kategorija.ID_kategorija})
-            </div>
-        }
-    </p>
+<body class="bootstrap-fix">
+    <form class="form-inline" action="/instrukcije" method="post">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 col-sm-6 col-sm-offset-3" style="text-align:center">
 
+                    <h4>Odaberi kategoriju:</h4>
+                    <hr />
+                    <div class="form-group">
+                        <label>
+                            Tražilica
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        @Html.TextBoxFor(model => model.Trazilica, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary">
+                            Traži
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-sm-6 col-sm-offset-3">
+                    <hr />
+                    <div class="list-group">
+                        @foreach (var opis in Model.Opisi)
+                        {
+                            <a href=@("/instrukcije/" + opis.Kategorija.ID_kategorija) class="list-group-item">
+                                @opis.Kategorija.naziv_kategorija
+                                <span class="badge">@opis.BrojInstrukcija</span>
+                            </a>}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 </body>
 </html>
