--- a/ppij_web_aplikacija/Views/Instrukcije/Predmet.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Predmet.cshtml
@@ -5,27 +5,50 @@
 <head>
     <title>@ViewBag.Title</title>
 </head>
-<body>
-    <h3>Biranje predmeta</h3>
-    <hr />
-    @using (Html.BeginForm("Index"))
-    {
-        <div>
-            Tražilica
-            @Html.TextBoxFor(model => model.Trazilica)
-            <input type="submit" value="Traži" />
-        </div>
-    }
-    <hr />
-    <p>
-        @foreach (var opis in Model.Opisi)
-        {
-            <div>
-                @opis.Predmet.naziv_predmet -
-                @Html.RouteLink("Odaberi", "Instrukcije", new { predmet_id = opis.Predmet.ID_predmet })
-            </div>
-        }
-    </p>
+<body class="bootstrap-fix">
+    <form class="form-inline" action=@("/instrukcije/" + ViewContext.RouteData.Values["kategorija_id"] + "/" 
+                                                       + ViewContext.RouteData.Values["ustanova_id"]) method="post">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 col-sm-6 col-sm-offset-3" style="text-align:center">
+                    <hr />
+                    <h3><b>Odaberi predmet:</b></h3>
+                    <hr />
+                    <div class="form-group">
+                        <label>
+                            Tražilica
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        @Html.TextBoxFor(model => model.Trazilica, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary">
+                            Traži
+                        </button>
+                    </div>
 
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-sm-6 col-sm-offset-3">
+                    <hr />
+                    <div class="list-group">
+                        @foreach (var opis in Model.Opisi)
+                        {
+                            if (opis.BrojInstrukcija != 0)
+                            {
+                                <a href=@("/instrukcije/" + ViewContext.RouteData.Values["kategorija_id"] + "/" 
+                                                          + ViewContext.RouteData.Values["ustanova_id"] + "/"
+                                                          + opis.Predmet.ID_predmet) class="list-group-item">
+                                    @opis.Predmet.naziv_predmet
+                                    <span class="badge">@opis.BrojInstrukcija</span>
+                                </a>}
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 </body>
 </html>
